# hermit

./: .gitignore  README.md  pyproject.toml
hermit/: __init__.py  __main__.py  actions.py  agent.py  cgroups.py  config.py  executor.py  hermit  llm.py  llm_backend.py  model_manager.py  mounts.py  planner.py  policy.py  sandbox_wrapper.py  seccomp_filter.py  settings_ui.py  setup_sandbox.py  ui.py
src/: actions.py  agent.py  audit.py  mounts.py  policy.py  sandbox.py  sandbox_wrapper.py
